Change language choose functional ( by Select->Option Value)

--- a/profile-edit.html
+++ b/profile-edit.html
@@ -751,16 +751,16 @@
                                                 <select class="custom-it custom--black">
                                                     <option value="Добавить язык" disabled selected>Добавить язык
                                                     </option>
-                                                    <option value="Английский">Английский</option>
-                                                    <option value="Русский">Русский</option>
+                                                    <option value="анг">Английский</option>
+                                                    <option value="рус">Русский</option>
                                                 </select>
                                                 <select class="custom-it custom--black">
                                                     <option value="Степень владения" disabled selected>Степень
                                                         владения
                                                     </option>
-                                                    <option value="свободно владею">свободно владею</option>
-                                                    <option value="начинающий">начинающий</option>
-                                                    <option value="нативный">нативный</option>
+                                                    <option value="свободно">свободно владею</option>
+                                                    <option value="нач">начинающий</option>
+                                                    <option value="нат">нативный</option>
                                                 </select>
 
                                                 <!-- BEGIN language-input -->
