Remove .toLowerCase method at tag-filter

--- a/profile-edit.html
+++ b/profile-edit.html
@@ -751,16 +751,17 @@
                                                 <select class="custom-it custom--black">
                                                     <option value="Добавить язык" disabled selected>Добавить язык
                                                     </option>
-                                                    <option value="анг">Английский</option>
-                                                    <option value="рус">Русский</option>
+                                                    <option value="eng">Английский</option>
+                                                    <option value="rus">Русский</option>
+                                                    <option value="ita">Итальянаский</option>
                                                 </select>
                                                 <select class="custom-it custom--black">
                                                     <option value="Степень владения" disabled selected>Степень
                                                         владения
                                                     </option>
-                                                    <option value="свободно">свободно владею</option>
-                                                    <option value="нач">начинающий</option>
-                                                    <option value="нат">нативный</option>
+                                                    <option value="good">свободно владею</option>
+                                                    <option value="bad">начинающий</option>
+                                                    <option value="very-good">нативный</option>
                                                 </select>
 
                                                 <!-- BEGIN language-input -->
