Unminify "common.js" / change language select functional + parsing already loaded languages

--- a/profile.html
+++ b/profile.html
@@ -544,8 +544,9 @@
                                                                       fill="#FFFFFF"></path>
                                                             </g>
                                                         </svg>
-                                                        <input type="file" id="project-preview">
+                                                        <input type="file" id="project-preview" multiple accept="image/*">
                                                     </label>
+                                                    <input type="file" class="hidden" id="project-upload-files">
                                                 </div>
                                             </div>
                                             <!-- BEGIN step-buttons -->
