Adding prev/next arrow to pagination

--- a/favorite.html
+++ b/favorite.html
@@ -357,17 +357,20 @@
                     <!-- BEGIN pagination -->
                     <section class="pagination">
                         <ul class="pagination-list">
+                            <li class="pagination__item">
+                                <a href="#" class="pagination__link link--prev"><</a>
+                            </li>
                             <li class="pagination__item is-active">
                                 <a href="#" class="pagination__link">1</a>
                             </li>
                             <li class="pagination__item">
-                                <a href="#" class="pagination__link">2</a>
+                                <a href="#" class="pagination__link">...</a>
                             </li>
                             <li class="pagination__item">
                                 <a href="#" class="pagination__link">3</a>
                             </li>
                             <li class="pagination__item">
-                                <a href="#" class="pagination__link">...</a>
+                                <a href="#" class="pagination__link link--next">></a>
                             </li>
                         </ul>
                     </section>
