--- a/profile.html
+++ b/profile.html
@@ -546,7 +546,7 @@
                                                         </svg>
                                                         <input type="file" id="project-preview" multiple accept="image/*">
                                                     </label>
-                                                    <input type="file" class="hidden" id="project-upload-files">
+                                                    <input type="file" class="hidden" id="project-upload-files" multiple>
                                                 </div>
                                             </div>
                                             <!-- BEGIN step-buttons -->
