#FIX semantic of project inside profile.html

--- a/profile.html
+++ b/profile.html
@@ -365,6 +365,40 @@
                                                 </figure>
                                                 <!-- END project ヽ(•‿•)ノ -->
                                             </li>
+                                            <li class="tag-filter__item" data-filter-attr="Films">
+                                                <!-- BEGIN project -->
+                                                <figure class="project">
+                                                    <div class="project__picture">
+                                                        <img src="images/ic/project-2.jpg" alt="">
+                                                    </div>
+                                                    <div class="project__info">
+                                                        <div class="project__title">
+                                                            <p>Американская история Х</p>
+                                                            <span>Художественный фильм, 1998 г.</span>
+                                                        </div>
+                                                        <ul>
+                                                            <li>
+                                                                <span class="list-text">Режиссёр</span>
+                                                                <span class="list-value">Квентин Тарантино</span>
+                                                            </li>
+                                                            <li>
+                                                                <span class="list-text">Оператор</span>
+                                                                <span class="list-value">Анджей Секула</span>
+                                                            </li>
+                                                            <li>
+                                                                <span class="list-text">Продакшен</span>
+                                                                <span class="list-value">Лоуренс Бендер</span>
+                                                            </li>
+                                                            <li class="item--big">
+                                                                <span class="list-text">Должность в проекте</span>
+                                                                <span class="list-value">Режиссёр, сценарист</span>
+                                                            </li>
+                                                        </ul>
+                                                    </div>
+                                                    <a href="#" class="project-show_more">Развернуть</a>
+                                                </figure>
+                                                <!-- END project ヽ(•‿•)ノ -->
+                                            </li>
                                             <li class="tag-filter__item" data-filter-attr="Advertisement">
                                                 <!-- BEGIN project -->
                                                 <figure class="project">
