--- a/profile-notification.html
+++ b/profile-notification.html
@@ -640,6 +640,7 @@
                             </div>
                             <!-- End additional-group -->
                             <input type="submit" class="button button--transparent-yellow" value="Искать">
+                            <a href="#" class="simple-link js-search-clear">Очистить фильтр</a>
                         </form>
                     </div>
                 </div>
