--- a/profile.html
+++ b/profile.html
@@ -142,9 +142,7 @@
                                         </g>
                                     </svg>
                                 </a>
-                                <a href="#" class="profile-action profile-action--repost"
-                                   data-tooltip-pos='bottom'
-                                   data-tooltip="Поделиться анкетой">
+                                <div class="profile-action profile-action--repost js-social-popup">
                                     <svg width="20px" height="20px" viewBox="1344 120 20 20" version="1.1"
                                          xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                         <g stroke="none" stroke-width="1" fill="none"
@@ -153,7 +151,53 @@
                                                   fill="#000000"></path>
                                         </g>
                                     </svg>
-                                </a>
+                                    <!-- BEGIN social-popup -->
+                                    <div class="social-popup">
+                                        <ul class="social-list">
+                                            <li class="social-list__item">
+                                                <a href="#" class="social-list__link social-gp" target="_blank">
+                                                    <svg width="40px" height="40px" viewBox="0 0 40 40" version="1.1"
+                                                         xmlns="http://www.w3.org/2000/svg"
+                                                         xmlns:xlink="http://www.w3.org/1999/xlink">
+                                                        <path d="M0,0 L40,0 L40,40 L0,40 L0,0 Z M22.8042585,20.0171705 C22.8042585,21.4457415 22.5054948,22.7180634 21.9079668,23.8341348 C21.3104394,24.9502062 20.4587914,25.8224591 19.3530222,26.4508929 C18.2472529,27.0793268 16.9800825,27.393544 15.5515108,27.393544 C14.5281594,27.393544 13.5494505,27.194368 12.6153846,26.7960166 C11.6813188,26.3976646 10.8777471,25.8619508 10.2046702,25.1888738 C9.53159323,24.5157969 8.99587938,23.7122252 8.59752738,22.7781594 C8.199176,21.8440935 8,20.8653846 8,19.8420332 C8,18.8186812 8.199176,17.8399723 8.59752738,16.9059065 C8.99587938,15.9718406 9.53159323,15.1682695 10.2046702,14.4951926 C10.8777471,13.8221157 11.6813188,13.2864012 12.6153846,12.8880492 C13.5494505,12.4896978 14.5281594,12.2905218 15.5515108,12.2905218 C17.5157969,12.2905218 19.2019231,12.9498628 20.6098898,14.268544 L18.5597526,16.236264 C17.7561815,15.4601649 16.7534338,15.0721157 15.5515108,15.0721157 C14.7067311,15.0721157 13.9254806,15.2850277 13.2077612,15.7108517 C12.4900412,16.1366757 11.9217034,16.7153157 11.5027471,17.4467717 C11.0837914,18.1782283 10.8743132,18.9766486 10.8743132,19.8420332 C10.8743132,20.7074178 11.0837914,21.5058382 11.5027471,22.2372942 C11.9217034,22.9687502 12.4900412,23.5473902 13.2077612,23.9732142 C13.9254806,24.3990388 14.7067311,24.6119508 15.5515108,24.6119508 C16.1215662,24.6119508 16.6452609,24.5329668 17.1225963,24.375 C17.5999311,24.2170332 17.9931317,24.0195742 18.3021975,23.7826234 C18.611264,23.5456732 18.8808382,23.2760991 19.1109206,22.9739009 C19.3410025,22.6717034 19.509272,22.3866757 19.615728,22.1188185 C19.722184,21.8509618 19.7960166,21.5968406 19.8372252,21.356456 L15.5515108,21.356456 L15.5515108,18.7603022 L22.680632,18.7603022 C22.7630492,19.1929945 22.8042585,19.6119508 22.8042585,20.0171705 Z M31.736264,18.7603022 L31.736264,20.9237637 L29.5831046,20.9237637 L29.5831046,23.0769231 L27.4196431,23.0769231 L27.4196431,20.9237637 L25.2664837,20.9237637 L25.2664837,18.7603022 L27.4196431,18.7603022 L27.4196431,16.6071428 L29.5831046,16.6071428 L29.5831046,18.7603022 L31.736264,18.7603022 Z"
+                                                              stroke="none" fill="#000000" fill-rule="evenodd"
+                                                              opacity="0.300000012"></path>
+                                                    </svg>
+                                                </a>
+                                            </li>
+                                            <li class="social-list__item">
+                                                <a href="#" class="social-list__link social-vk" target="_blank">
+                                                    <svg width="40px" height="40px" viewBox="0 0 40 40" version="1.1"
+                                                         xmlns="http://www.w3.org/2000/svg"
+                                                         xmlns:xlink="http://www.w3.org/1999/xlink">
+                                                        <path d="M0,0 L40,0 L40,40 L0,40 L0,0 Z M30.2796053,14.8368015 C30.4417291,15.2879295 29.913064,16.3241137 28.6936088,17.9453541 C28.524436,18.1709181 28.2953478,18.470495 28.0063442,18.8440853 C27.456532,19.5489729 27.1393328,20.0106741 27.0547461,20.2291891 C26.9349154,20.5181926 26.9842575,20.803672 27.2027724,21.0856272 C27.3226032,21.2336529 27.6080825,21.5226571 28.0592105,21.9526379 L28.0697838,21.9526379 L28.0803571,21.9632112 L28.0909303,21.9737851 L28.1120768,21.9949316 C29.105968,22.9183335 29.7791352,23.6972339 30.1315789,24.3316322 C30.1527255,24.3668769 30.1756341,24.410932 30.2003055,24.463799 C30.2249762,24.5166653 30.2496476,24.6100632 30.2743183,24.7439914 C30.2989897,24.8779202 30.2972276,24.997751 30.269032,25.1034842 C30.2408364,25.2092169 30.1527255,25.306139 30.0046992,25.3942499 C29.8566728,25.4823609 29.6487312,25.5264166 29.3808741,25.5264166 L26.6741074,25.5687097 C26.5049339,25.6039537 26.3075655,25.586332 26.0820021,25.5158428 C25.8564381,25.4453541 25.6731672,25.3678164 25.5321899,25.2832303 L25.3207234,25.1563505 C25.1092575,25.0083242 24.8625469,24.7827602 24.5805918,24.4796585 C24.2986373,24.1765575 24.0572131,23.9034135 23.8563204,23.6602272 C23.6554278,23.4170415 23.4404371,23.212624 23.2113488,23.0469754 C22.98226,22.8813268 22.7831295,22.8266983 22.6139566,22.8830895 C22.5928101,22.8901379 22.5646145,22.9024739 22.5293705,22.9200956 C22.4941259,22.9377179 22.4342105,22.9888221 22.3496238,23.0734089 C22.2650377,23.1579956 22.1892621,23.2619661 22.1222977,23.3853217 C22.0553339,23.5086766 21.9954179,23.6919476 21.9425516,23.9351333 C21.8896853,24.1783196 21.866776,24.4514636 21.8738251,24.7545646 C21.8738251,24.8602979 21.8614897,24.95722 21.8368183,25.045331 C21.8121476,25.1334419 21.7857141,25.1986436 21.7575185,25.2409373 L21.7152255,25.2938036 C21.5883457,25.4277324 21.4015505,25.5052695 21.15484,25.5264166 L19.9389097,25.5264166 C19.4384396,25.5546116 18.923872,25.4964583 18.3952069,25.3519569 C17.8665413,25.2074548 17.4030779,25.0206596 17.0048168,24.7915714 C16.6065552,24.5624832 16.2435387,24.3298701 15.9157657,24.0937329 C15.5879933,23.8575956 15.3395206,23.6549409 15.1703478,23.485768 L14.9060149,23.2320084 C14.8355263,23.1615198 14.7386042,23.0557865 14.6152493,22.9148093 C14.4918937,22.773832 14.2398968,22.453108 13.8592575,21.9526379 C13.4786181,21.4521684 13.1050284,20.9199785 12.7384865,20.3560689 C12.3719453,19.7921585 11.9402023,19.0485028 11.4432564,18.1251009 C10.9463112,17.2016983 10.486372,16.2430518 10.0634396,15.2491606 C10.0211465,15.136379 10,15.041219 10,14.9636813 C10,14.8861436 10.0105733,14.8297531 10.0317198,14.7945084 L10.0740128,14.7310689 C10.1797461,14.59714 10.3806394,14.5301756 10.676692,14.5301756 L13.5737781,14.5090291 C13.6583648,14.5231265 13.7394267,14.5460358 13.8169644,14.5777556 C13.8945021,14.6094754 13.9508926,14.6394331 13.9861373,14.6676286 L14.0390036,14.6993484 C14.1517859,14.7768861 14.236372,14.8896684 14.2927632,15.0376948 C14.4337404,15.3901379 14.5958648,15.7549171 14.7791352,16.1320322 C14.9624061,16.5091468 15.1069076,16.7963882 15.2126408,16.9937566 L15.3818137,17.3003825 C15.5862312,17.723315 15.7835996,18.0898562 15.9739189,18.4000063 C16.1642389,18.7101571 16.3351739,18.9515806 16.4867244,19.1242783 C16.6382756,19.2969754 16.7845392,19.4326663 16.9255171,19.5313505 C17.0664943,19.6300348 17.1863251,19.6793769 17.2850093,19.6793769 C17.3836935,19.6793769 17.4788535,19.6617545 17.5704886,19.6265105 C17.5845867,19.6194615 17.6022084,19.6018392 17.6233549,19.5736436 C17.6445021,19.545448 17.6867952,19.467911 17.7502347,19.3410312 C17.8136749,19.2141514 17.8612549,19.0485028 17.8929747,18.8440853 C17.9246945,18.6396684 17.9581764,18.3541891 17.9934211,17.9876478 C18.0286651,17.6211059 18.0286651,17.1805518 17.9934211,16.6659842 C17.9793236,16.3840291 17.9476032,16.1267453 17.8982611,15.8941322 C17.8489189,15.6615198 17.7995768,15.4993954 17.7502347,15.4077602 L17.6867952,15.2808804 C17.5105733,15.041219 17.2109964,14.8896684 16.788064,14.8262282 C16.6964288,14.8121308 16.7140505,14.727544 16.8409303,14.5724693 C16.9607611,14.4385404 17.0946899,14.3328072 17.2427162,14.2552695 C17.6163065,14.0719992 18.4586465,13.9874124 19.7697368,14.0015105 C20.3477446,14.008559 20.8235434,14.0543769 21.1971337,14.1389636 C21.3381109,14.1742076 21.4561796,14.2217876 21.5513389,14.281703 C21.6464989,14.3416183 21.7187497,14.4262051 21.7680918,14.5354625 C21.8174339,14.64472 21.8544406,14.7575017 21.879112,14.8738082 C21.9037827,14.9901148 21.9161181,15.1504764 21.9161181,15.3548939 C21.9161181,15.5593114 21.9125939,15.753155 21.9055448,15.9364259 C21.8984964,16.1196962 21.8896853,16.3681689 21.879112,16.6818438 C21.8685387,16.9955188 21.8632518,17.2862844 21.8632518,17.5541421 C21.8632518,17.6316798 21.8597276,17.7797055 21.8526785,17.9982211 C21.8456295,18.216736 21.8438674,18.3859089 21.8473916,18.5057396 C21.8509164,18.6255703 21.8632518,18.7683103 21.8843983,18.9339583 C21.9055448,19.099607 21.9460758,19.23706 22.0059918,19.3463175 C22.0659072,19.455575 22.1452069,19.5419238 22.2438912,19.605364 C22.3002817,19.6194615 22.3601971,19.633559 22.4236373,19.6476571 C22.4870768,19.6617545 22.5787126,19.6229857 22.6985434,19.5313505 C22.8183741,19.4397154 22.9523023,19.3181219 23.1003286,19.1665714 C23.2483549,19.0150209 23.4316259,18.7788836 23.6501408,18.4581596 C23.8686558,18.1374362 24.1083179,17.758559 24.3691259,17.3215291 C24.7920583,16.5884465 25.1691728,15.795448 25.5004701,14.9425348 C25.5286651,14.8720461 25.5639097,14.8103686 25.6062027,14.7575017 C25.6484964,14.7046354 25.6872653,14.6676286 25.7225093,14.6464821 L25.7648023,14.6147623 C25.7789004,14.6077133 25.7965227,14.5989021 25.8176693,14.5883289 C25.8388158,14.5777556 25.8846337,14.5671823 25.9551223,14.5566091 C26.0256109,14.5460358 26.0960996,14.5442737 26.1665882,14.5513221 L29.2117013,14.5301756 C29.4866074,14.4949316 29.7121707,14.5037428 29.8883926,14.5566091 C30.0646145,14.6094754 30.173872,14.6676286 30.2161657,14.7310689 L30.2796053,14.8368015 Z"
+                                                              stroke="none" fill="#000000" fill-rule="evenodd"
+                                                              opacity="0.300000012"></path>
+                                                    </svg>
+                                                </a>
+                                            </li>
+                                            <li class="social-list__item">
+                                                <a href="#" class="social-list__link social-fb" target="_blank">
+                                                    <svg width="40px" height="40px" viewBox="0 0 40 40" version="1.1"
+                                                         xmlns="http://www.w3.org/2000/svg"
+                                                         xmlns:xlink="http://www.w3.org/1999/xlink">
+                                                        <defs>
+                                                            <linearGradient id="inst-gradient">
+                                                                <stop offset="0%" stop-color="#D76650"></stop>
+                                                                <stop offset="50%" stop-color="#AC5C96"></stop>
+                                                                <stop offset="100%" stop-color="#6A73B4"></stop>
+                                                            </linearGradient>
+                                                        </defs>
+                                                        <path d="M0,0 L40,0 L40,40 L0,40 L0,0 Z M24.9753697,10.1385469 L24.9753697,13.1865766 L23.1627152,13.1865766 C22.5007697,13.1865766 22.0543407,13.3251234 21.8234297,13.6022172 C21.5925186,13.8793103 21.4770628,14.294951 21.4770628,14.8491379 L21.4770628,17.0312503 L24.8599138,17.0312503 L24.4096366,20.4487379 L21.4770628,20.4487379 L21.4770628,29.2118228 L17.9441193,29.2118228 L17.9441193,20.4487379 L15,20.4487379 L15,17.0312503 L17.9441193,17.0312503 L17.9441193,14.5143166 C17.9441193,13.0826669 18.3443655,11.9723676 19.1448579,11.1834207 C19.945351,10.3944738 21.0113917,10 22.34298,10 C23.4744455,10 24.351909,10.0461828 24.9753697,10.1385469 Z"
+                                                              stroke="none" fill="#000000" fill-rule="evenodd"
+                                                              opacity="0.300000012"></path>
+                                                    </svg>
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <!-- END social-popup ヽ(•‿•)ノ -->
+                                </div>
                                 <a href="#" class="profile-action profile-action--download"
                                    data-tooltip-pos='bottom'
                                    data-tooltip="Скачать анкету как *.pdf">
@@ -326,6 +370,7 @@
                                                                     </span>
                                                             </li>
                                                         </ul>
+                                                        <a href="#" class="pin js-pin-project"></a>
                                                     </div>
                                                     <a href="#" class="project-show_more">Развернуть</a>
                                                 </figure>
@@ -360,6 +405,7 @@
                                                                 <span class="list-value">Режиссёр, сценарист</span>
                                                             </li>
                                                         </ul>
+                                                        <a href="#" class="pin js-pin-project"></a>
                                                     </div>
                                                     <a href="#" class="project-show_more">Развернуть</a>
                                                 </figure>
@@ -394,6 +440,7 @@
                                                                 <span class="list-value">Режиссёр, сценарист</span>
                                                             </li>
                                                         </ul>
+                                                        <a href="#" class="pin js-pin-project"></a>
                                                     </div>
                                                     <a href="#" class="project-show_more">Развернуть</a>
                                                 </figure>
@@ -428,6 +475,7 @@
                                                                 <span class="list-value">Режиссёр-постановщик</span>
                                                             </li>
                                                         </ul>
+                                                        <a href="#" class="pin js-pin-project"></a>
                                                     </div>
                                                     <a href="#" class="project-show_more">Развернуть</a>
                                                 </figure>
@@ -468,6 +516,7 @@
                                                                 </span>
                                                             </li>
                                                         </ul>
+                                                        <a href="#" class="pin js-pin-project"></a>
                                                     </div>
                                                     <a href="#" class="project-show_more">Развернуть</a>
                                                 </figure>
@@ -578,9 +627,11 @@
                                                                       fill="#FFFFFF"></path>
                                                             </g>
                                                         </svg>
-                                                        <input type="file" id="project-preview" multiple accept="image/*">
+                                                        <input type="file" id="project-preview" multiple
+                                                               accept="image/*">
                                                     </label>
-                                                    <input type="file" class="hidden" id="project-upload-files" multiple>
+                                                    <input type="file" class="hidden" id="project-upload-files"
+                                                           multiple>
                                                 </div>
                                             </div>
                                             <!-- BEGIN step-buttons -->
@@ -1137,6 +1188,26 @@
                             </form>
                         </div>
                     </figure>
+                    <figure class="popup popup--extended" id="favorite-add">
+                        <div class="popup-title">
+                            <p>Добавить в избранное</p>
+                        </div>
+                        <div class="popup-subtitle">
+                            <p>Вы добавляете пользователя в избранное, и можете оставить комметарий. Он будет виден только вам</p>
+                        </div>
+                        <div class="popup-form">
+                            <form method="POST" action="/">
+                                <div class="input-group">
+                                    <textarea name="some-name" placeholder="Текст комментария"></textarea>
+                                </div>
+            
+                                <div class="popup-buttons half-group">
+                                    <input type="submit" value="Добавить" class="button button--black">
+                                    <a href="#" class="simple-link link--black js-popup-close">Отменить</a>
+                                </div>
+                            </form>
+                        </div>
+                    </figure>
                     <figure class="popup popup--extended" id="message-send-form">
                         <div class="popup-title">
                             <p>Отправить сообщение</p>
@@ -1407,6 +1478,7 @@
                             </div>
                             <!-- End additional-group -->
                             <input type="submit" class="button button--transparent-yellow" value="Искать">
+                            <a href="#" class="simple-link js-search-clear">Очистить фильтр</a>
                         </form>
                     </div>
                 </div>
