--- a/index-unreg.html
+++ b/index-unreg.html
@@ -595,6 +595,26 @@
                             </form>
                         </div>
                     </figure>
+                    <figure class="popup popup--extended" id="favorite-add">
+                        <div class="popup-title">
+                            <p>Добавить в избранное</p>
+                        </div>
+                        <div class="popup-subtitle">
+                            <p>Вы добавляете пользователя в избранное, и можете оставить комметарий. Он будет виден только вам</p>
+                        </div>
+                        <div class="popup-form">
+                            <form method="POST" action="/">
+                                <div class="input-group">
+                                    <textarea name="some-name" placeholder="Текст комментария"></textarea>
+                                </div>
+            
+                                <div class="popup-buttons half-group">
+                                    <input type="submit" value="Добавить" class="button button--black">
+                                    <a href="#" class="simple-link link--black js-popup-close">Отменить</a>
+                                </div>
+                            </form>
+                        </div>
+                    </figure>
                     <figure class="popup popup--extended" id="message-send-form">
                         <div class="popup-title">
                             <p>Отправить сообщение</p>
@@ -641,6 +661,10 @@
                     <div class="login-section__bottom">
                         <a href="#favorite-form" class="button button--transparent popup-call">Избранное</a>
                         <a href="#message-send-form" class="button button--white popup-call">Сообщение</a>
+                    </div>
+
+                    <div class="login-section__bottom">
+                        <a href="#favorite-add" class="button button--transparent popup-call">Добавить в избранное</a>
                     </div>
 
                     <!-- BEGIN aside--close -->
