--- a/profile-edit.html
+++ b/profile-edit.html
@@ -402,7 +402,7 @@
                                             <div class="input-group make-space">
                                                 <label>Контакты *</label>
                                                 <div class="lock-group">
-                                                    <input type="text" placeholder="Телефон">
+                                                    <input type="text" placeholder="Телефон" class="phone-validation">
                                                     <a href="#" class="lock-button js-locking" data-tooltip-pos='right'
                                                        data-tooltip="Показывать/скрыть телефон на странице профиля">
                                                     </a>
@@ -1457,6 +1457,7 @@
 <script src="components/grayscale/blur.js" type="text/javascript"></script>
 <script src="components/popupbox/source/jquery.fancybox.js" type="text/javascript"></script>
 <script src="components/swipe-lib/jquery.touchSwipe.min.js" type="text/javascript"></script>
+<script src="components/jquery/jquery.maskedinput.min.js" type="text/javascript"></script>
 <script src="assets/js/common.js" type="text/javascript"></script>
 </body>
 
