#FIX смена аватарки пользователя
+рядом с существующей картинкой (блок .profile-image) добавить блок
.input-group

+добавить блоку
<div class="edit-column photo-column> класс has-photo ->

       <div class="edit-column photo-column has-photo">

--- a/profile-edit.html
+++ b/profile-edit.html
@@ -265,7 +265,11 @@
                                 <form method="POST" action="/" id="information-step1">
                                     <div class="edit-row">
                                         <!-- BEGIN edit-column -->
-                                        <div class="edit-column photo-column">
+                                        <div class="edit-column photo-column has-photo">
+                                            <div class="profile-image">
+                                                <img src="http://placehold.it/500x500"
+                                                     alt="user-profile-picture" style="max-width: 100%">
+                                            </div>
                                             <div class="input-group">
                                                 <label for="profile-image" class="profile-image">
                                                     <input type="file" id="profile-image" class="hidden">
